store user education
