# app/Http/Resources/UserEducation/UserEducationResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources\UserEducation;
 
+use App\Http\Resources\Auth\UserResource;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -14,6 +15,15 @@ class UserEducationResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'user' => new UserResource($this->user),
+            'name' => $this->name,
+            'major' => $this->major,
+            'is_studying' => getStatus($this->is_studying),
+            'start_date' => $this->start_date,
+            'end_date' => $this->end_date,
+            'description' => $this->description
+        ];
     }
 }
